# RoboticsAndROS2-LearnByDoingManipulators

./: .gitattributes
Setup/: readme.md
arduinobot_ws/: frames_2025-09-09_13.03.54.gv
arduinobot_ws/install/: local_setup.sh  setup.sh
arduinobot_ws/log/: latest_build
arduinobot_ws/src/arduinobot_bringup/: CMakeLists.txt  package.xml
arduinobot_ws/src/arduinobot_controller/: CMakeLists.txt  arduinobot_controller.xml  package.xml
arduinobot_ws/src/arduinobot_cpp_examples/: CMakeLists.txt  package.xml
arduinobot_ws/src/arduinobot_cpp_examples/src/: simple_action_client.cpp  simple_action_server.cpp  simple_lifecycle_node.cpp  simple_moveit_interface.cpp  simple_parameter.cpp  simple_publisher.cpp  simple_service_client.cpp  simple_service_server.cpp  simple_subscriber.cpp
arduinobot_ws/src/arduinobot_description/: CMakeLists.txt  package.xml
arduinobot_ws/src/arduinobot_description/launch/: gazebo.launch.py
arduinobot_ws/src/arduinobot_description/rviz/: display.rviz
arduinobot_ws/src/arduinobot_description/urdf/: arduinobot.urdf.xacro  arduinobot_gazebo.xacro  arduinobot_ros2_control.xacro
arduinobot_ws/src/arduinobot_firmware/: CMakeLists.txt
arduinobot_ws/src/arduinobot_msgs/: CMakeLists.txt  package.xml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
notasDeClase/clase100/: readme.md
notasDeClase/clase101/: readme.md
notasDeClase/clase102/: readme.md
notasDeClase/clase103/: readme.md
notasDeClase/clase104/: readme.md
notasDeClase/clase105/: readme.md
notasDeClase/clase106/: readme.md
notasDeClase/clase107/: readme.md
notasDeClase/clase108/: readme.md
notasDeClase/clase109/: readme.md
notasDeClase/clase110/: readme.md
notasDeClase/clase111/: readme.md
notasDeClase/clase112/: readme.md
notasDeClase/clase113/: readme.md
notasDeClase/clase114/: readme.md
notasDeClase/clase115/: readme.md
notasDeClase/clase120/: readme.md
notasDeClase/clase25/: readme.md
notasDeClase/clase26/: readme.md
notasDeClase/clase27/: readme.md
notasDeClase/clase28/: readme.md
notasDeClase/clase29/: readme.md
notasDeClase/clase31/: readme.md
notasDeClase/clase32/: readme.md
notasDeClase/clase33/: readme.md
notasDeClase/clase36/: readme.md
notasDeClase/clase37/: readme.md
notasDeClase/clase38/: readme.md
notasDeClase/clase39/: readme.md
notasDeClase/clase41/: readme.md
notasDeClase/clase42/: readme.md
notasDeClase/clase43/: readme.md
notasDeClase/clase44/: readme.md
notasDeClase/clase44_tarea/: reamde.md
notasDeClase/clase47/: readme.md
notasDeClase/clase49/: readme.md
notasDeClase/clase50/: readme.md
notasDeClase/clase51/: readme.md
notasDeClase/clase60/: readme.md
notasDeClase/clase62/: readme.md
notasDeClase/clase63/: readme.md
notasDeClase/clase65/: readme.md
notasDeClase/clase66/: readme.md
notasDeClase/clase70/: readme.md
notasDeClase/clase71/: readme.md
notasDeClase/clase72/: readme.md
notasDeClase/clase74/: readme.md
notasDeClase/clase75/: readme.md
notasDeClase/clase78/: readme.md
notasDeClase/clase79/: readme.md
notasDeClase/clase80/: readme.md
notasDeClase/clase81/: readme.md
notasDeClase/clase83/: readme.md
notasDeClase/clase84/: readme.md
notasDeClase/clase85/: readme.md
notasDeClase/clase87/: readme.md
notasDeClase/clase88/: readme.md
notasDeClase/clase89/: readme.md
notasDeClase/clase93/: readme.md
notasDeClase/clase94/: readme.md
notasDeClase/clase95/: readme.md
notasDeClase/clase98/: readme.md
notasDeClase/clase99/: readme.md
resources/: readme.md
(+308 files in other folders)
